templates/quickstart-python_template.yaml
---
# Source: quickstart-python/templates/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o quickstart-python
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: redis
status:
  loadBalancer: {}
---
# Source: quickstart-python/templates/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o quickstart-python
    kompose.service.expose: quickstart-python.test
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
    - name: "5080"
      port: 5080
      targetPort: 5080
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
---
# Source: quickstart-python/templates/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o quickstart-python
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -o quickstart-python
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - image: redis
          name: redis
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
status: {}
---
# Source: quickstart-python/templates/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o quickstart-python
    kompose.service.expose: quickstart-python.test
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -o quickstart-python
        kompose.service.expose: quickstart-python.test
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
        - env:
            - name: APP_NAME
              value: Compose
            - name: FLASK_HOST
              value: 0.0.0.0
            - name: FLASK_PORT
              value: "5080"
            - name: PROXY_FIX
              value: "0"
          image: mikespub/quickstart-python
          name: web
          ports:
            - containerPort: 5080
          resources: {}
      restartPolicy: Always
status: {}
---
# Source: quickstart-python/templates/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o quickstart-python
    kompose.service.expose: quickstart-python.test
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  rules:
    - host: quickstart-python.test
      http:
        paths:
          - backend:
              service:
                name: web
                port:
                  number: 5080
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
